samples/_failures_safe/1761421377_7fa079_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85cb5d09.c: In function ‘main’:
./samples/SAFE/__tmp_85cb5d09.c:200:5: error: expected expression at end of input
  200 |     if (len ==
      |     ^~
./samples/SAFE/__tmp_85cb5d09.c:200:5: error: expected declaration or statement at end of input
